feat: :rocket: Aula 3
Event listeners

--- a/src/css/credit-card.css
+++ b/src/css/credit-card.css
@@ -14,7 +14,7 @@
 .cc-logo {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: start;
 }
 
 .cc-info {
@@ -29,6 +29,7 @@
   letter-spacing: 0.04em;
 
   color: #e8e8e8;
+
   text-shadow: 0 0.12rem 0.32rem rgb(23 23 23 / 40%);
 }
 
